# Category-Aware-QA-Evaluation-Router

./: LICENSE  Makefile  README.md  config.py  pyproject.toml  requirements.txt
benchmark/: deduplication.py  noise.py  semantic_generation.py  templates_count.py  templates_hybrid.py  templates_metadata.py  templates_time.py  templates_unsupported.py  validation.py
cli/: _notebook_runner.py  run_phase1_generation.py  run_phase2_training.py  run_phase3_evaluation.py  run_phase4_baselines.py
data/: README.md  evaluation_dataset.csv  evaluation_with_llm.csv  holdout_cross_generator.csv  holdout_metadata.json  synthetic_final_20260304_205519_c9e4df6d_full.csv  synthetic_final_20260304_205519_c9e4df6d_metadata.json  synthetic_final_20260304_205519_c9e4df6d_test.csv  synthetic_final_20260304_205519_c9e4df6d_train.csv  synthetic_final_20260304_205519_c9e4df6d_val.csv
evaluation/: __init__.py  answer_parser.py  comparison.py  conversation_generator.py  dataset_builder.py  deterministic.py  latency.py  polarity_parser.py  prompt_templates.py  reliability.py  statistics.py  system_runner.py
models/: router_label_encoder.joblib  router_model_calibrated.joblib  router_model_tfidf_lr.joblib  router_tfidf_vectorizer.joblib
notebooks/: 01_synthetic_data_generation.py  02_router_training.py  03_evaluation_pipeline.py
router/: benchmarking.py  calibration.py  classifiers.py  confidence.py  feature_extraction.py  keyword_baseline.py  template_family_out.py
thesis_router/: __init__.py  llm_client.py  (+1 more)
thesis_router.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+64 files in other folders)
